<resources>
    <string name="app_name">iUsta</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Menu</string>
    <string name="menu_notifications">Notifications</string>
    <string name="app_exit_label">Press BACK again to exit</string>

    <!-- Login Activity -->
    <string name="login">Log In</string>
    <string name="signup">Have not registered yet? <b><font color="#FF9800">Sign up</font></b></string>
    <string name="forgotpass">Forgot password?</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="birthday">Birthday</string>
    <string name="password_confirm">Confirm password</string>

    <!-- Reset Password Activity -->
    <string name="resetpass">Reset password</string>
    <string name="send">Send</string>
    <string name="goback">Go Back</string>
    <string name="resetpass_success">Password reset request sent successfully</string>
    <string name="resetpass_error_empty" translatable="false">Please enter your email address</string>
    <string name="resetpass_message">Please enter your email address. You will receive a link to create a new password via email</string>

    <!-- Change Password Fragment -->
    <string name="change_password">Change password</string>
    <string name="confirm">Confirm</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">Confirm new password</string>

    <!-- Registration Activity -->
    <string name="reg">Sign Up</string>
    <string name="loginlabel">Already registered? <b><font color="#FF9800">Log In</font></b></string>
    <string name="privacy">I accept <b><u><font color="#FF9800">Privacy Policy</font></u></b></string>
    <string name="terms">I accept all <b><u><font color="#FF9800">Terms and Conditions</font></u></b></string>
    <string name="school">School Name</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="emailaddress">Email Address</string>
    <string name="phone">Phone number</string>
    <string name="tx">Thank you!</string>
    <string name="after_reg">Your request been successfully sent! Please wait for your confirmation. Confirmation letter will be sent to your email</string>


    <!-- Tickets Fragment -->
    <string name="fragment_tickets_title_label">Active orders</string>
    <string name="fragment_tickets_history_label">Orders history</string>
    <string name="fragment_ticket_detail_title_label">Ticket Detail</string>
    <string name="new_ticket">Make another order</string>
    <string name="order_status">Order status: </string>
    <string name="order_type">"Category: "</string>
    <string name="order_date">Created date: </string>

    <string name="ticket_category_label">Category:</string>
    <string name="ticket_date_label">Date:</string>
    <string name="ticket_num_label">Ticket Number:</string>
    <string name="ticket_status_label">Status:</string>

    <!-- Add Rating Fragment -->
    <string name="rate">Rate our specialist!</string>
    <string name="average">Average</string>
    <string name="comment">Add a comment</string>
    <string name="type_comment">Type comment here</string>



    <!-- Create Ticket Fragment -->
    <string name="fragment_create_ticket_title_label">Create ticket</string>
    <string name="create_ticket_success_label">Your order has been sent successfully</string>
    <string name="create_ticket_view_label">You can view your order status by clicking on the button</string>
    <string name="create_ticket_open_label">See your order status</string>
    <string name="total_size">Total size: </string>

    <!-- Settings Fragment -->
    <string name="fragment_menu_title_label">Menu</string>
    <string name="fragment_settings_title_label">Settings</string>
    <string name="fragment_contact_title_label">Contact Us</string>
    <string name="fragment_about_title_label">About</string>
    <string name="fragment_profile_title_label">Edit profile</string>
    <string name="fragment_changepass_title_label">Change password</string>
    <string name="fragment_changeprofile_success">Profile data has been successfully changed</string>
    <string name="fragment_changepass_success">Password has been successfully changed</string>
    <string name="fragment_changepass_failure">Password has not been changed</string>

    <string name="fragment_faq_title_label">FAQ</string>
    <string name="fragment_privacy_title_label">Privacy Policy</string>
    <string name="fragment_terms_title_label">Terms and Conditions</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="bookmark_error">Something went wrong, please try again.</string>
    <string name="bookmark_success">Ticket bookmarked successfully</string>
    <string name="un_bookmark_success">Ticket bookmarked removed successfully</string>
    <string name="assigned_specialist">Assigned specialist</string>
    <string name="proceed_to_scan">Proceed to scan</string>
    <string name="btn_continue">Continue</string>
    <string name="get_repaired">Choose what you want to get repaired</string>
    <string name="open_ticket">Open ticket</string>
    <string name="no_ticket">Ticket not found</string>
    <string name="your_specialist_is_not_assigned">Your specialist is not assigned</string>
    <string name="your_specialist_on_his_way">Your specialist on his way</string>
    <string name="your_specialist_has_arrived">Your specialist has arrived</string>
    <string name="your_request_is_completed">Your request has been completed</string>
    <string name="your_request_was_rejected">Your request has been rejected</string>
    <string name="assistant_identified">Assistant identified</string>
    <string name="assistant_not_identified">Assistant not identified</string>
    <string name="assistant_instruction" translatable="false">Lorem ipsum dolor orem ipsum dolor orem ipsum dolor orem ipsum dolor </string>
    <string name="proceed_anyway">Proceed anyway</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="az">AZ</string>
    <string name="eng">ENG</string>
    <string name="ru">RU</string>


    <!-- Errors -->


    <string name="empty_fields_error" translatable="false">Fill in all the data</string>
    <string name="empty_field" translatable="false">Empty field</string>
    <string name="nothing" translatable="false">Nothing found</string>
    <string name="empty_email" translatable="false">Empty email</string>
    <string name="incorrect_email" translatable="false">Incorrect email</string>
    <string name="empty_password" translatable="false">Empty password</string>
    <string name="short_password" translatable="false">Password must be at least 8 characters</string>
    <string name="empty_password_confirm" translatable="false">Empty confirm password</string>
    <string name="empty_name" translatable="false">Empty name</string>
    <string name="empty_surname" translatable="false">Empty surname</string>
    <string name="empty_phone" translatable="false">Empty phone</string>
    <string name="empty_school" translatable="false">Empty customer</string>
    <string name="privacy_and_terms" translatable="false">You must accept the privacy policy and terms and conditions</string>
    <string name="reset_email" translatable="false">The selected email is invalid.</string>
    <string name="empty_note" translatable="false">Empty note</string>
    <string name="big_size" translatable="false">Attachment too large, Max size 10mb</string>
    <string name="see_order">See order</string>
    <string name="type_note_here">Type note here</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>


</resources>