<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigationGraphSettings"
    app:startDestination="@id/settingsFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.ls.iusta.ui.settings.SettingsFragment"
        android:label="@string/fragment_menu_title_label"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:popUpTo="@+id/settingsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_changePassFragment"
            app:destination="@id/changePassFragment"
            app:popUpTo="@+id/settingsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_contactFragment"
            app:destination="@id/contactFragment"
            app:popUpTo="@+id/settingsFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:popUpTo="@+id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ls.iusta.ui.settings.ProfileFragment"
        android:label="@string/fragment_profile_title_label"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/changePassFragment"
        android:name="com.ls.iusta.ui.settings.ChangePassFragment"
        android:label="@string/fragment_changepass_title_label"
        tools:layout="@layout/fragment_changepass" />

    <fragment
        android:id="@+id/contactFragment"
        android:name="com.ls.iusta.ui.settings.ContactUsFragment"
        android:label="@string/fragment_contact_title_label"
        tools:layout="@layout/fragment_contactus" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.ls.iusta.ui.settings.AboutFragment"
        android:label="@string/fragment_about_title_label"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_aboutFragment_to_faqFragment"
            app:destination="@id/faqFragment"
            app:popUpTo="@+id/settingsFragment"/>
        <action
            android:id="@+id/action_aboutFragment_to_privacyFragment"
            app:destination="@id/privacyFragment"
            app:popUpTo="@+id/settingsFragment"/>
        <action
            android:id="@+id/action_aboutFragment_to_termsFragment"
            app:destination="@id/termsFragment"
            app:popUpTo="@+id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/faqFragment"
        android:name="com.ls.iusta.ui.settings.info.FaqFragment"
        android:label="@string/fragment_faq_title_label"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/privacyFragment"
        android:name="com.ls.iusta.ui.settings.info.TermsFragment"
        android:label="@string/fragment_privacy_title_label"
        tools:layout="@layout/fragment_terms">
        <argument
            android:name="url_type"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/termsFragment"
        android:name="com.ls.iusta.ui.settings.info.TermsFragment"
        android:label="@string/fragment_terms_title_label"
        tools:layout="@layout/fragment_terms">
        <argument
            android:name="url_type"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.ls.iusta.ui.notifications.NotificationsListFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications_list">
        <action
            android:id="@+id/action_notificationsFragment_to_ticketDetailFragment"
            app:destination="@id/ticketDetailFragment"
            app:popUpTo="@id/settingsFragment"/>
    </fragment>

    <fragment
        android:id="@+id/ticketsListFragment"
        android:name="com.ls.iusta.ui.ticketslist.TicketsListFragment"
        android:label="@string/fragment_tickets_title_label"
        tools:layout="@layout/fragment_tickets_list"/>

    <fragment
        android:id="@+id/ticketDetailFragment"
        android:name="com.ls.iusta.ui.ticketdetail.TicketDetailFragment"
        android:label="@string/fragment_ticket_detail_title_label"
        tools:layout="@layout/fragment_ticket_detail">
        <argument
            android:name="ticket_id"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>

</navigation>