<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTv"
        style="@style/TextView.Title.Mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_margin="36dp"
        app:layout_constraintBottom_toTopOf="@id/oldPassTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPassTextInputLayout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/titleTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPassTextInputEditText"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textVisiblePassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPassTextInputLayout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/oldPassTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPassTextInputEditText"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textVisiblePassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPassConfirmTextInputLayout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        app:layout_constraintTop_toBottomOf="@+id/newPassTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPassConfirmTextInputEditText"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_confirm"
            android:inputType="textVisiblePassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/nextButton"
        style="@style/Button.Accent"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@id/newPassConfirmTextInputLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>