<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/l_header"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo_w"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTv"
        style="@style/TextView.Title.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetpass"
        app:layout_constraintBottom_toTopOf="@id/emailTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/messageTv"
        style="@style/TextView.Title.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:text="@string/resetpass_message"
        app:layout_constraintBottom_toTopOf="@id/emailTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        app:layout_constraintTop_toBottomOf="@+id/messageTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInputEditText"
            style="@style/TextInputLayout.Login"
            android:layout_width="match_parent"
            android:hint="@string/email"
            tools:text="text@mail.com"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/nextButton"
        style="@style/Button.Accent"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/send"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout" />

    <TextView
        android:id="@+id/backTv"
        style="@style/TextView.Title.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:text="@string/goback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextButton"
        app:layout_constraintVertical_chainStyle="packed" />



</androidx.constraintlayout.widget.ConstraintLayout>