<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txTv"
            style="@style/TextView.Title.Big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/create_ticket_success_label"
            app:layout_constraintTop_toBottomOf="@+id/icon"
            app:layout_constraintBottom_toTopOf="@+id/messageTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/messageTv"
            style="@style/TextView.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:text="@string/create_ticket_view_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txTv"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/nextButton"
            style="@style/Button.Accent"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:text="@string/create_ticket_open_label"
            app:layout_constraintTop_toBottomOf="@id/messageTv" />

        <Button
            android:id="@+id/cancelButton"
            android:visibility="gone"
            style="@style/Button.Accent"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:text="@string/goback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextButton" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
